[workspace]

members = [
    "service",
    "clients/rust"
]

[dependencies]
actix = "0.5.8"
actix-web = { git = "https://github.com/davidMcneil/actix-web", branch = "0.6" }
chrono = {version = "0.4.4",features = ["serde"]}
env_logger = "0.5.10"
futures = "0.1"
open = "1.2.1"
parking_lot = "0.6.2"
psutil = "1.1.1"
serde = "1.0.68"
serde_derive = "1.0.68"
serde_json = "1.0.22"
structopt = "0.2.10"
rand = "0.5.3"
reqwest = "0.8.6"
url = "1.7.0"
uuid = {version = "0.6.5",features = ["serde","v4"]}
