[workspace]

members = [
    "service",
    "clients/rust"
]

[dependencies]
actix = "0.7.1"
actix-web = "0.7.1"
chrono = {version = "0.4.4",features = ["serde"]}
env_logger = "0.5.10"
futures = "0.1"
open = "1.2.1"
log = "0.4.3"
parking_lot = "0.6.3"
psutil = "1.1.1"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"
structopt = "0.2.10"
rand = "0.5.4"
reqwest = "0.8.6"
url = "1.7.1"
uuid = {version = "0.6.5",features = ["serde","v4"]}
