[workspace]

members = [
    "service",
    "clients/rust"
]

[dependencies]
actix = "0.7.4"
actix-web = "0.7.7"
chrono = {version = "0.4.6",features = ["serde"]}
env_logger = "0.5.13"
futures = "0.1.24"
include_dir = "0.2.1"
log = "0.4.5"
mime_guess = "2.0.0-alpha.6"
open = "1.2.2"
parking_lot = "0.6.4"
psutil = "1.1.1"
rand = "0.5.5"
reqwest = "0.8.8"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.27"
structopt = "0.2.10"
url = "1.7.1"
uuid = {version = "0.7.1",features = ["serde","v4"]}
