[package]
name = "courier"
version = "0.1.0"
authors = ["David McNeil <mcneil.david2@gmail.com>"]
description = "A pubsub service."
license = "(MIT OR Apache-2.0)"

[dependencies]
actix = "0.7.1"
actix-web = "0.7.1"
chrono = {version = "0.4.4",features = ["serde"]}
env_logger = "0.5.10"
futures = "0.1"
log = "0.4.3"
open = "1.2.1"
parking_lot = "0.6.3"
psutil = "1.1.1"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"
rand = "0.5.4"
reqwest = "0.8.6"
structopt = "0.2.10"
uuid = {version = "0.6.5",features = ["serde","v4"]}

[lib]
name = "courier"
path = "src/lib/lib.rs"

[[bin]]
name = "courier"
path = "src/main.rs"
