[package]
name = "courier"
version = "1.0.0"
authors = ["David McNeil <mcneil.david2@gmail.com>"]
description = "A pubsub service with an HTTP, JSON api."
license = "(MIT OR Apache-2.0)"
edition = "2018"

[dependencies]
actix = "0.7.9"
actix-web = "0.7.18"
chrono = {version = "0.4.6",features = ["serde"]}
env_logger = "0.6.0"
futures = "0.1.25"
include_dir = "0.2.1"
log = "0.4.6"
mime_guess = "2.0.0-alpha.6"
open = "1.2.2"
parking_lot = "0.7.1"
psutil = "1.2.0"
rand = "0.6.4"
reqwest = "0.9.8"
serde = "1.0.85"
serde_derive = "1.0.85"
serde_json = "1.0.36"
structopt = "0.2.14"
uuid = {version = "0.7.1",features = ["serde","v4"]}

[lib]
name = "courier"
path = "src/lib/lib.rs"

[[bin]]
name = "courier"
path = "src/main.rs"
