[package]
name = "courier-client"
version = "0.1.0"
authors = ["David McNeil <mcneil.david2@gmail.com>"]
description = "A rust client for the Courier pub/sub service."
license = "(MIT OR Apache-2.0)"

[dependencies]
chrono = {version = "0.4.6",features = ["serde"]}
reqwest = "0.8.8"
serde = "1.0.78"
serde_derive = "1.0.78"
serde_json = "1.0.27"
url = "1.7.1"
uuid = {version = "0.7.0",features = ["serde","v4"]}

[dev-dependencies]
rand = "0.5.4"
